--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,8 @@ services:
       JAEGER_SAMPLER_TYPE: "probabilistic"
       JAEGER_SAMPLER_PARAM: 1
       JAEGER_REPORTER_LOG_SPANS: "true"
-      JAEGER_AGENT_HOST: jaeger
-      JAEGER_AGENT_PORT: 6832
+      JAEGER_REPORTER_AGENT_HOST: jaeger
+      JAEGER_REPORTER_AGENT_PORT: 6832
     volumes:
       - ./Basic-JS:/app
     networks:
@@ -54,8 +54,8 @@ services:
       JAEGER_SAMPLER_TYPE: "probabilistic"
       JAEGER_SAMPLER_PARAM: 1
       JAEGER_REPORTER_LOG_SPANS: "true"
-      JAEGER_AGENT_HOST: jaeger
-      JAEGER_AGENT_PORT: 6832
+      JAEGER_REPORTER_AGENT_HOST: jaeger
+      JAEGER_REPORTER_AGENT_PORT: 6832
     volumes:
       - ./Basic-TS:/app
     networks:
@@ -74,8 +74,8 @@ services:
       JAEGER_SAMPLER_TYPE: "probabilistic"
       JAEGER_SAMPLER_PARAM: 1
       JAEGER_REPORTER_LOG_SPANS: "true"
-      JAEGER_AGENT_HOST: jaeger
-      JAEGER_AGENT_PORT: 6832
+      JAEGER_REPORTER_AGENT_HOST: jaeger
+      JAEGER_REPORTER_AGENT_PORT: 6832
     volumes:
       - ./Express-JS:/app
     networks:
@@ -95,8 +95,8 @@ services:
       JAEGER_SAMPLER_TYPE: "probabilistic"
       JAEGER_SAMPLER_PARAM: 1
       JAEGER_REPORTER_LOG_SPANS: "true"
-      JAEGER_AGENT_HOST: jaeger
-      JAEGER_AGENT_PORT: 6832
+      JAEGER_REPORTER_AGENT_HOST: jaeger
+      JAEGER_REPORTER_AGENT_PORT: 6832
     volumes:
       - ./Express-TS:/app
     networks:
@@ -116,8 +116,8 @@ services:
       JAEGER_SAMPLER_TYPE: "probabilistic"
       JAEGER_SAMPLER_PARAM: 1
       JAEGER_REPORTER_LOG_SPANS: "true"
-      JAEGER_AGENT_HOST: jaeger
-      JAEGER_AGENT_PORT: 6832
+      JAEGER_REPORTER_AGENT_HOST: jaeger
+      JAEGER_REPORTER_AGENT_PORT: 6832
     volumes:
       - ./Restify-JS:/app
     networks:
@@ -137,8 +137,8 @@ services:
       JAEGER_SAMPLER_TYPE: "probabilistic"
       JAEGER_SAMPLER_PARAM: 1
       JAEGER_REPORTER_LOG_SPANS: "true"
-      JAEGER_AGENT_HOST: jaeger
-      JAEGER_AGENT_PORT: 6832
+      JAEGER_REPORTER_AGENT_HOST: jaeger
+      JAEGER_REPORTER_AGENT_PORT: 6832
     volumes:
       - ./Restify-TS:/app
     networks:
