--- a/Basic-JS/package.json
+++ b/Basic-JS/package.json
@@ -8,5 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Carlos E Panarello",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^6.1.0",
+    "jaeger-tracer-decorator": "^2.0.1"
+  }
 }
