--- a/Basic-TS/package.json
+++ b/Basic-TS/package.json
@@ -12,5 +12,8 @@
   "license": "MIT",
   "devDependencies": {
     "typescript": "^3.2.2"
+  },
+  "dependencies": {
+    "jaeger-tracer-decorator": "^2.0.1"
   }
 }
