--- a/Express-JS/package.json
+++ b/Express-JS/package.json
@@ -11,6 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
-    "express": "^4.16.4"
+    "dotenv": "^6.1.0",
+    "express": "^4.16.4",
+    "jaeger-tracer-decorator": "^2.0.1"
   }
 }
