--- a/Express-TS/package.json
+++ b/Express-TS/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "jaeger-tracer-decorator": "^2.0.1"
   }
 }
