--- a/Restify-JS/package.json
+++ b/Restify-JS/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
+    "jaeger-tracer-decorator": "^2.0.1",
     "restify": "^7.3.0",
     "restify-errors": "^6.1.1",
     "restify-plugins": "^1.6.0"
