--- a/Restify-TS/package.json
+++ b/Restify-TS/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "jaeger-tracer-decorator": "^2.0.1",
     "restify": "^7.3.0",
     "restify-errors": "^6.1.1",
     "restify-plugins": "^1.6.0"
